fix: button auto candidates z-index

--- a/src/index.css
+++ b/src/index.css
@@ -366,5 +366,4 @@ button#add-200-candidates {
   padding: 1rem;
   font-weight: 600;
   color: white;
-  z-index: 99999999999;
 }
